// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculate simulations-indépendant > Année incomplète 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: 2757
indépendant . revenu professionnel: undefined
indépendant . rémunération . cotisations: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: undefined"
`;

exports[`calculate simulations-indépendant > Année incomplète 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 3645
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: 2757
indépendant . revenu professionnel: 2096
indépendant . rémunération . cotisations: 1645
indépendant . rémunération . nette: 2000
indépendant . rémunération . nette . après impôt: 2000
indépendant . rémunération . totale: 3645"
`;

exports[`calculate simulations-indépendant > Année incomplète 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 7203
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: 2757
indépendant . revenu professionnel: 5192
indépendant . rémunération . cotisations: 2203
indépendant . rémunération . nette: 5000
indépendant . rémunération . nette . après impôt: 5000
indépendant . rémunération . totale: 7203"
`;

exports[`calculate simulations-indépendant > Année incomplète 4`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 14161
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: 2757
indépendant . revenu professionnel: 10381
indépendant . rémunération . cotisations: 4161
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000
indépendant . rémunération . totale: 14161"
`;

exports[`calculate simulations-indépendant > Année incomplète 5`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 137164
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: 2757
indépendant . revenu professionnel: 103721
indépendant . rémunération . cotisations: 37164
indépendant . rémunération . nette: 100000
indépendant . rémunération . nette . après impôt: 73529
indépendant . rémunération . totale: 137164"
`;

exports[`calculate simulations-indépendant > Année incomplète 6`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 1238969
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: 2757
indépendant . revenu professionnel: 1033639
indépendant . rémunération . cotisations: 238969
indépendant . rémunération . nette: 1000000
indépendant . rémunération . nette . après impôt: 529283
indépendant . rémunération . totale: 1238969"
`;

exports[`calculate simulations-indépendant > DROM 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . cotisations: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 20000

Notifications affichées : indépendant . cotisations et contributions . cotisations . exonérations . DROM"
`;

exports[`calculate simulations-indépendant > acre 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 72950
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: 1609
indépendant . revenu professionnel: 51978
indépendant . rémunération . cotisations: 22950
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41241
indépendant . rémunération . totale: 72950"
`;

exports[`calculate simulations-indépendant > activité 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 28252
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 20764
indépendant . rémunération . cotisations: 8252
indépendant . rémunération . nette: 20000
indépendant . rémunération . nette . après impôt: 19408
indépendant . rémunération . totale: 28252"
`;

exports[`calculate simulations-indépendant > activité 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 28271
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 20764
indépendant . rémunération . cotisations: 8271
indépendant . rémunération . nette: 20000
indépendant . rémunération . nette . après impôt: 19408
indépendant . rémunération . totale: 28271"
`;

exports[`calculate simulations-indépendant > années précédentes 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 87271
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 62367
indépendant . rémunération . cotisations: 27271
indépendant . rémunération . nette: 60000
indépendant . rémunération . nette . après impôt: 48124
indépendant . rémunération . totale: 87271"
`;

exports[`calculate simulations-indépendant > années précédentes 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 72919
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 51977
indépendant . rémunération . cotisations: 22919
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41121
indépendant . rémunération . totale: 72919"
`;

exports[`calculate simulations-indépendant > années précédentes 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 58715
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 41591
indépendant . rémunération . cotisations: 18715
indépendant . rémunération . nette: 40000
indépendant . rémunération . nette . après impôt: 33929
indépendant . rémunération . totale: 58715"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 77637
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 52104
indépendant . rémunération . cotisations: 27637
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41203
indépendant . rémunération . totale: 77637"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 78120
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 52117
indépendant . rémunération . cotisations: 28120
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41199
indépendant . rémunération . totale: 78120"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 80637
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 52185
indépendant . rémunération . cotisations: 30637
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41179
indépendant . rémunération . totale: 80637"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 4`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 74014
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 52005
indépendant . rémunération . cotisations: 24014
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41233
indépendant . rémunération . totale: 74014"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 5`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 74013
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 52005
indépendant . rémunération . cotisations: 24013
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41233
indépendant . rémunération . totale: 74013"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 6`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 659890
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 517914
indépendant . rémunération . cotisations: 159890
indépendant . rémunération . nette: 500000
indépendant . rémunération . nette . après impôt: 281989
indépendant . rémunération . totale: 659890"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 30000
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 18164
indépendant . rémunération . cotisations: 12647
indépendant . rémunération . nette: 17353
indépendant . rémunération . nette . après impôt: 17353
indépendant . rémunération . totale: 30000"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 30000
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 17254
indépendant . rémunération . cotisations: 13847
indépendant . rémunération . nette: 16153
indépendant . rémunération . nette . après impôt: 16153
indépendant . rémunération . totale: 30000"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 30000
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 20964
indépendant . rémunération . cotisations: 9847
indépendant . rémunération . nette: 20153
indépendant . rémunération . nette . après impôt: 19689
indépendant . rémunération . totale: 30000"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 4`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 20000
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 14194
indépendant . rémunération . cotisations: 6346
indépendant . rémunération . nette: 13654
indépendant . rémunération . nette . après impôt: 13654
indépendant . rémunération . totale: 20000"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 5`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 300000
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 226711
indépendant . rémunération . cotisations: 81432
indépendant . rémunération . nette: 218568
indépendant . rémunération . nette . après impôt: 142740
indépendant . rémunération . totale: 300000"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 6`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 300000
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 223211
indépendant . rémunération . cotisations: 84932
indépendant . rémunération . nette: 215068
indépendant . rémunération . nette . après impôt: 142390
indépendant . rémunération . totale: 300000"
`;

exports[`calculate simulations-indépendant > cotisations forfaitaires début d'activité 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 50000
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: 3403
indépendant . revenu professionnel: 35678
indépendant . rémunération . cotisations: 15676
indépendant . rémunération . nette: 34324
indépendant . rémunération . nette . après impôt: 30455
indépendant . rémunération . totale: 50000"
`;

exports[`calculate simulations-indépendant > cotisations minimales 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 1464
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 137
indépendant . rémunération . cotisations: 1364
indépendant . rémunération . nette: 100
indépendant . rémunération . nette . après impôt: 100
indépendant . rémunération . totale: 1464"
`;

exports[`calculate simulations-indépendant > cotisations minimales 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 258
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 104
indépendant . rémunération . cotisations: 158
indépendant . rémunération . nette: 100
indépendant . rémunération . nette . après impôt: 100
indépendant . rémunération . totale: 258"
`;

exports[`calculate simulations-indépendant > cotisations minimales 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 1239
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 830
indépendant . rémunération . cotisations: 439
indépendant . rémunération . nette: 800
indépendant . rémunération . nette . après impôt: 800
indépendant . rémunération . totale: 1239"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 45000
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 41485
indépendant . rémunération . cotisations: 4734
indépendant . rémunération . nette: 40266
indépendant . rémunération . nette . après impôt: 34655
indépendant . rémunération . totale: 45000"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 9000
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 7001
indépendant . rémunération . cotisations: 2240
indépendant . rémunération . nette: 6760
indépendant . rémunération . nette . après impôt: 6760
indépendant . rémunération . totale: 9000"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 10000
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: 984
indépendant . revenu professionnel: 9253
indépendant . rémunération . cotisations: 1015
indépendant . rémunération . nette: 8985
indépendant . rémunération . nette . après impôt: 8985
indépendant . rémunération . totale: 10000"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 4`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 15000
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 13356
indépendant . rémunération . cotisations: 2048
indépendant . rémunération . nette: 12952
indépendant . rémunération . nette . après impôt: 12952
indépendant . rémunération . totale: 15000"
`;

exports[`calculate simulations-indépendant > exonération âge 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 55000
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 39518
indépendant . rémunération . cotisations: 16972
indépendant . rémunération . nette: 38028
indépendant . rémunération . nette . après impôt: 33007
indépendant . rémunération . totale: 55000"
`;

exports[`calculate simulations-indépendant > imposition à l'IR 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 100000
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 72019
indépendant . rémunération . cotisations: 30693
indépendant . rémunération . nette: 69307
indépendant . rémunération . nette . après impôt: 54536
indépendant . rémunération . totale: 100000"
`;

exports[`calculate simulations-indépendant > impôt sur le revenu 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 28252
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 20764
indépendant . rémunération . cotisations: 8252
indépendant . rémunération . nette: 20000
indépendant . rémunération . nette . après impôt: 17924
indépendant . rémunération . totale: 28252"
`;

exports[`calculate simulations-indépendant > inversions IR 1`] = `
"entreprise . charges: 1000
entreprise . chiffre d'affaires: 20000
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 13952
indépendant . rémunération . cotisations: 5561
indépendant . rémunération . nette: 13439
indépendant . rémunération . nette . après impôt: 13439
indépendant . rémunération . totale: 19000"
`;

exports[`calculate simulations-indépendant > inversions IR 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 14195
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 10382
indépendant . rémunération . cotisations: 4195
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000
indépendant . rémunération . totale: 14195"
`;

exports[`calculate simulations-indépendant > inversions IR 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 62186
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 44072
indépendant . rémunération . cotisations: 19799
indépendant . rémunération . nette: 42387
indépendant . rémunération . nette . après impôt: 36000
indépendant . rémunération . totale: 62186"
`;

exports[`calculate simulations-indépendant > inversions IS 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 14195
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 10382
indépendant . rémunération . cotisations: 4195
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000
indépendant . rémunération . totale: 14195"
`;

exports[`calculate simulations-indépendant > inversions IS 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 14195
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 10382
indépendant . rémunération . cotisations: 4195
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000
indépendant . rémunération . totale: 14195"
`;

exports[`calculate simulations-indépendant > échelle de revenus 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 1934
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 549
indépendant . rémunération . cotisations: 1434
indépendant . rémunération . nette: 500
indépendant . rémunération . nette . après impôt: 500
indépendant . rémunération . totale: 1934"
`;

exports[`calculate simulations-indépendant > échelle de revenus 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 2524
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 1065
indépendant . rémunération . cotisations: 1524
indépendant . rémunération . nette: 1000
indépendant . rémunération . nette . après impôt: 1000
indépendant . rémunération . totale: 2524"
`;

exports[`calculate simulations-indépendant > échelle de revenus 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 3114
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 1581
indépendant . rémunération . cotisations: 1614
indépendant . rémunération . nette: 1500
indépendant . rémunération . nette . après impôt: 1500
indépendant . rémunération . totale: 3114"
`;

exports[`calculate simulations-indépendant > échelle de revenus 4`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 3703
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 2097
indépendant . rémunération . cotisations: 1703
indépendant . rémunération . nette: 2000
indépendant . rémunération . nette . après impôt: 2000
indépendant . rémunération . totale: 3703"
`;

exports[`calculate simulations-indépendant > échelle de revenus 5`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 7242
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 5193
indépendant . rémunération . cotisations: 2242
indépendant . rémunération . nette: 5000
indépendant . rémunération . nette . après impôt: 5000
indépendant . rémunération . totale: 7242"
`;

exports[`calculate simulations-indépendant > échelle de revenus 6`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 14195
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 10382
indépendant . rémunération . cotisations: 4195
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000
indépendant . rémunération . totale: 14195"
`;

exports[`calculate simulations-indépendant > échelle de revenus 7`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 140189
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 103803
indépendant . rémunération . cotisations: 40189
indépendant . rémunération . nette: 100000
indépendant . rémunération . nette . après impôt: 73496
indépendant . rémunération . totale: 140189"
`;

exports[`calculate simulations-indépendant > échelle de revenus 8`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 1242158
impôt . montant: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 1033726
indépendant . rémunération . cotisations: 242158
indépendant . rémunération . nette: 1000000
indépendant . rémunération . nette . après impôt: 529241
indépendant . rémunération . totale: 1242158"
`;
